--- a/app/frontend/public/index.html
+++ b/app/frontend/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kario Media</title>
+    <title style="font-weight: bold;">Slang</title>
 
     <!-- LINK DE BOOSTRAP -->
     <link
